--- a/src/main.css
+++ b/src/main.css
@@ -1,25 +1,27 @@
-@import "/src/style/form/form.css";
 @import "/src/style/display.css";
+@import "/src/style/form/form.css";
 
 .container {
   height: fit-content;
-  width: 100vw;
-  padding: 2vh 34vw;
+  width: fit-content;
   box-sizing: border-box;
-  justify-content: center;
-  align-content: center;
+  margin: 5vh auto;
 }
 
 .main {
   height: fit-content;
-  padding: 2em 3em;
   box-sizing: border-box;
  }
 
- #display, form {
+#display, form {
   height: fit-content;
-  width: 100%;
   box-sizing: border-box;
   display: grid;
   grid-template-rows: repeat(3, auto);
+}
+
+@media screen and (max-width: 650px) {
+  .container {
+    margin: unset;
+  }
 }
