--- a/src/style/display.css
+++ b/src/style/display.css
@@ -1,5 +1,7 @@
 #display {
+  width: 55%;
   padding: 0 2vw 4vw;
+  margin: auto;
   border: 3px solid rgb(116, 117, 104);
 }
 
@@ -13,6 +15,10 @@
 .header-info div {
   display: grid;
   row-gap: .3vh;
+}
+
+#obj-value{
+  margin-top: 2vh;
 }
 
 #obj-value p {
@@ -41,4 +47,30 @@
 
 #company-values * > :nth-child(3) {
   margin-left: 20px;
+}
+
+@media screen and (max-width: 650px) {
+  #display {
+    width: 100%;
+    height: 100vh;
+    padding: 0 4vw 6vh;
+    font-size: 1.5vh;
+  }
+
+  .header-info h1 {
+    font-size: 5vw;
+  }
+
+  .body-info h3 {
+    margin-top: 2vh;
+    font-size: 3vw;
+  }
+
+  .body-values{
+    row-gap: 1.2vh;
+  }
+
+  #contact-values {
+    font-size: 3vw;
+  }
 }
