--- a/src/main.css
+++ b/src/main.css
@@ -1,27 +1,27 @@
 @import "/src/style/display.css";
 @import "/src/style/form/form.css";
 
-.container {
+.container,
+#display,
+.main,
+form,
+#form-wrap {
   height: fit-content;
-  width: fit-content;
+  width: 100%;
   box-sizing: border-box;
-  margin: 5vh auto;
 }
 
-.main {
-  height: fit-content;
-  box-sizing: border-box;
- }
+.container {
+  padding: 5vh 30vw;
+}
 
 #display, form {
-  height: fit-content;
-  box-sizing: border-box;
   display: grid;
   grid-template-rows: repeat(3, auto);
 }
 
 @media screen and (max-width: 650px) {
   .container {
-    margin: unset;
+    padding: unset;
   }
 }
