added form validation

--- a/src/style/form/form.css
+++ b/src/style/form/form.css
@@ -31,9 +31,9 @@ textarea:focus {
   outline: unset;
 }
 
-input:invalid,
-select:invalid,
-textarea:invalid {
+input:invalid:focus,
+select:invalid:focus,
+textarea:invalid:focus {
   border-color: red;
 }
 
