--- a/src/style/display.css
+++ b/src/style/display.css
@@ -24,6 +24,7 @@
 #obj-value p {
   font-style: italic;
   text-indent: 25px;
+  overflow: hidden;
 }
 
 .body-values {
@@ -47,6 +48,7 @@
 
 #company-values * > :nth-child(3) {
   margin-left: 20px;
+  overflow: hidden;
 }
 
 @media screen and (max-width: 650px) {
